fix footer on mobile

--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,7 +1,7 @@
 footer.content-info{
   .container{
     border-top:1px solid #000;
-    @include scut-padding(28px 0);
+    @include scut-padding(28px n);
   }
   #sb_instagram {
     padding-bottom:0!important;
